# harpmath

./: .gitignore  CMakeLists.txt  package.xml  setup.py
src/harpmath/tests/: rotations_test.py
src/harpmath/tf/: rotations.py  transformations.py
